fix: align footer copyright to bottom-right

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -36,6 +36,7 @@ footer.sticky-bottom {
     color: #111111 !important;
     font-size: 0.85rem;
     letter-spacing: 0.03em;
+    text-align: right !important;
   }
 }
 
